--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <title>Task List</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="./static/styles/main.css" />
     <link rel="stylesheet" href="./static/styles/login.css" />
-    <title>React App</title>
+
+    <link rel="icon" href="./static/images/icon.png" />
+    <link rel="apple-touch-icon" sizes="192x192" href="./static/images/icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="./static/images/icon.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="./static/images/icon.png" />
+    <meta name="msapplication-TileColor" content="#000000" />
+    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#000000" />
+    <meta name="title" content="TASK LIST" />
+    <meta name="description" content="TASK LIST" />
+    <meta name="keywords" content="task list" />
+    <meta name="author" content="German Ordoñez" />
+    <meta property="og:locale" content="en_EN" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://notes.aldo.codes/" />
+    <meta property="og:site_name" content="aldo.codes" />
+    <meta property="og:title" content="task list" />
+    <meta property="og:description" content="TASK LIST" />
+    <meta property="og:image" content="./static/images/logo.png" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
